# iroh_ex

./: .gitignore  .tool-versions  Cargo.toml  README.md  mix.exs
.github/workflows/: elixir.yml  precompiled.yml  rust.yml
lib/: iroh_ex.ex  iroh_otp.ex  native.ex
livebooks/: sigmajs copy.livemd  sigmajs.livemd
native/iroh_ex/: Cargo.toml  README.md  build.sh  deps.txt  infos_graph_viz.txt_  run_main.sh  sync-cruncher.sh
native/iroh_ex/mutants.out/: lock.json  mutants.json  outcomes.json
native/iroh_ex/mutants.out.old/: lock.json  mutants.json  outcomes.json
native/iroh_ex/src/: actor.rs  erlang_actor.rs  erlang_actor.rs.txt  gossip_actor.rs  lib.rs  lib.rs.txt  lib_chatgpt.rs.txt  lib_closure_message.rs.txt  lib_refactoring.rs.txt  lib_refactoring2.rs.txt  main.rs  state.rs  tokio_runtime.rs  utils.rs  wrappers.rs
native/iroh_ex/src/phoenix_client_ex/: .gitignore  README.md  mix.exs
native/iroh_ex/src/phoenix_client_ex/lib/: phoenix_client_ex.ex
native/iroh_ex/src/phoenix_client_ex/test/: phoenix_client_ex_test.exs
test/: iroh_ex_test.exs  test_helper.exs
