[package]
name = "iroh_ex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "iroh_ex"
crate-type = ["cdylib"]

[dependencies]
# log = "0.4.22"
tracing-subscriber = "0.3.19"
pretty_env_logger = "0.5.0"
chrono = "0.4.40"
rustler = "0.36.1"
iroh = {version = "0.34.0", features = ["discovery-local-network"]}
iroh-gossip = "0.34.0"
iroh-blobs = "0.34.0"
iroh-docs = {version = "0.34.0", features = ["rpc"]}
quic-rpc = "0.19.0"
rand = "0.6.4"
futures-lite = "2.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
data-encoding = "2.8.0"

tokio = { version = "1", features = ["full"] }
n0-future = "0.1.2"
anyhow = "1.0.97"
tracing = "0.1.41"
once_cell = "1.19"
lazy_static = "1.3.0"


