# cargo-features = ["codegen-backend"]

[package]
name = "iroh_ex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "iroh_ex"
crate-type = ["cdylib"]

[dependencies]
# log = "0.4.22"
# pretty_env_logger = "0.5.0"
chrono = "0.4.40"
# rustler = "0.36.1"
rustler = { git = "https://github.com/filmor/rustler.git", rev = "17740a6dc39c79e47e94dd5e59914d30777a0131",  features = ["nif_version_2_15", "derive"]}
# , default-features = false, features = ["staticlib", "derive", "nif_version_2_15"]
iroh = {version = "0.34.0", features = ["discovery-local-network"]}

# , rev = "8064448e7923960931728c256877138f33ca8282"
# , rev = "22bf681a7db49da735c25ca831cd94c206e53a48"
#iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip.git", rev = "22bf681a7db49da735c25ca831cd94c206e53a48"}
iroh-gossip = "0.34.1"
#iroh-blobs = "0.34.0"
#iroh-docs = {version = "0.34.0", features = ["rpc"]}
# quic-rpc = "0.19.0"
rand = "0.6.4"
futures-lite = "2.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
data-encoding = "2.8.0"

tokio = { version = "1", features = ["full"] }
n0-future = "0.1.2"
anyhow = "1.0.97"
once_cell = "1.21.3"
lazy_static = "1.3.0"
# clap = "4.5.32"

tracing = { version = "0.1.41", features=["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

atty = "0.2.14"

[dev-dependencies]

[profile.dev]
# codegen-backend = "cranelift"
debug = false
lto = "off"
codegen-units = 512
incremental = true
# panic = "abort"


[profile.release]
debug = false
lto = "off"
codegen-units = 1024
incremental = true
# panic = "abort"

#[profile.release]
#lto = "off" 
#codegen-units = 256
#lto = "fat" 
#codegen-units = 1
#strip = true
#opt-level = "z"