# cargo-features = ["codegen-backend"]

[package]
name = "iroh_ex"
version = "0.0.11"
authors = []
edition = "2021"

[lib]
name = "iroh_ex"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
# log = "0.4.22"
# pretty_env_logger = "0.5.0"
chrono = "0.4.41"
# rustler = "0.36.1"
rustler = { git = "https://github.com/filmor/rustler.git", rev = "17740a6dc39c79e47e94dd5e59914d30777a0131",  features = ["nif_version_2_15", "derive"]}
# , default-features = false, features = ["staticlib", "derive", "nif_version_2_15"]
# iroh = {version = "0.34.1", git = "https://github.com/n0-computer/iroh.git", rev = "42b605e53d89c89faf0f63a86bf48d0039ea53b4", features = ["discovery-local-network"]}
# iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "main", features = ["discovery-local-network"]}
iroh = {version = "0.35.0", features = ["discovery-local-network"]}
# iroh-net = { git = "https://github.com/n0-computer/iroh.git", rev = "98b4a1b9f86f39575c7670d80facdb82659c004a" }

# , rev = "8064448e7923960931728c256877138f33ca8282"
# , rev = "22bf681a7db49da735c25ca831cd94c206e53a48"
# iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip.git", rev = "6c72d298032ba49736f52ed13b32f556acd2f298"}
# iroh-gossip = {version = "0.34.1", git = "https://github.com/n0-computer/iroh-gossip.git", rev = "4384f73721283998e483b0454d2f2a6d6afee19b"}
iroh-gossip = "0.35.0"

# Frando PR
# 4384f73721283998e483b0454d2f2a6d6afee19b
# refactor(hyparview): only add peers to active view after explict Neighbor message#56
# 90bd921601429a67b1785324280d276bb747275d

# not sure what PR: 
# 98b4a1b9f86f39575c7670d80facdb82659c004a

# iroh-gossip = "0.34.1"

# hickory-resolver = "0.25.1"
# hickory-resolver = "0.25.0-alpha.5"

iroh-blobs = "0.35.0"
iroh-docs = {version = "0.35.0", features = ["rpc"]}
quic-rpc = "0.20.0"

rand = "0.8.1"
futures-lite = "2.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
data-encoding = "2.9.0"

tokio = { version = "1.45.0", features = ["full", "tracing"] }
num_cpus = "1.16"
# console-subscriber = "0.4.1"

# pprof = { version = "0.14.0", features = ["flamegraph", "protobuf", "frame-pointer"] }
# parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }

n0-future = "0.1.3"
anyhow = "1.0.98"
once_cell = "1.21.3"
lazy_static = "1.3.0"
# clap = "4.5.32"

#[dependencies.iroh-quinn]
#version = "*"
#default-features = false
#features = ["tls-rustls"]

tracing = { version = "0.1.41", features=["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.77"

atty = "0.2.14"

[dev-dependencies]

[profile.dev]
debug = false
lto = "off"
codegen-units = 512
incremental = true
# panic = "abort"

[profile.release]
debug = false
lto = "off"
codegen-units = 1024
incremental = true
# panic = "abort"

#[profile.release]
#lto = "fat" 
#codegen-units = 1
#strip = true
#opt-level = "z"